[gd_scene load_steps=10 format=2]

[ext_resource path="res://png/Objects/mashineScreen.png" type="Texture" id=1]
[ext_resource path="res://png/Objects/mashineBox.png" type="Texture" id=2]
[ext_resource path="res://png/Objects/Barrel (3).png" type="Texture" id=3]
[ext_resource path="res://objects/ItemHolder.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/InputDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://png/Objects/ControlRods.png" type="Texture" id=6]
[ext_resource path="res://src/Reactor.gd" type="Script" id=7]
[ext_resource path="res://objects/GameButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Lever.tscn" type="PackedScene" id=9]

[node name="Reactor" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 7 )

[node name="ControlRods" type="Sprite" parent="."]
position = Vector2( -190.364, -158.85 )
texture = ExtResource( 6 )

[node name="BatterySocket" parent="." instance=ExtResource( 4 )]
position = Vector2( 187.709, -252.967 )
scale = Vector2( 2, 2 )
accepted_node_group = "batteries"

[node name="InputDoor" parent="." instance=ExtResource( 5 )]
position = Vector2( -298.665, -23.9388 )
accepted_node_group = "resourcebarrels"

[node name="mashineScreen" type="Sprite" parent="."]
position = Vector2( -191.134, -124.115 )
texture = ExtResource( 1 )

[node name="Barrel (3)" type="Sprite" parent="."]
position = Vector2( 0.0733643, -133.88 )
rotation = 1.57079
scale = Vector2( 0.516587, 0.516587 )
texture = ExtResource( 3 )

[node name="mashineBox" type="Sprite" parent="."]
position = Vector2( -191.067, -124.38 )
texture = ExtResource( 2 )

[node name="mashineBox2" type="Sprite" parent="."]
position = Vector2( 187.94, -125.032 )
texture = ExtResource( 2 )

[node name="mashineScreen2" type="Sprite" parent="."]
position = Vector2( -0.192352, -134.681 )
texture = ExtResource( 1 )

[node name="mashineScreen3" type="Sprite" parent="."]
position = Vector2( 187.731, -124.87 )
texture = ExtResource( 1 )

[node name="FuelInd" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -233.017
margin_top = -146.263
margin_right = -193.017
margin_bottom = -132.263
rect_scale = Vector2( 4.13573, 3.56407 )
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempInd" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -41.5846
margin_top = -157.734
margin_right = -1.58459
margin_bottom = -143.734
rect_scale = Vector2( 4.13573, 3.56407 )
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutInd" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 147.697
margin_top = -146.98
margin_right = 187.697
margin_bottom = -132.98
rect_scale = Vector2( 4.13573, 3.56407 )
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameButton" parent="." instance=ExtResource( 8 )]
position = Vector2( -283.801, -6.67371 )
scale = Vector2( 2, 2 )

[node name="Lever" parent="." instance=ExtResource( 9 )]
position = Vector2( -99.089, -2.65436 )
scale = Vector2( 2, 2 )
[connection signal="attached" from="BatterySocket" to="." method="_on_BatterySocket_attached"]
[connection signal="detached" from="BatterySocket" to="." method="_on_BatterySocket_detached"]
[connection signal="attached" from="InputDoor" to="." method="_on_InputDoor_attached"]
[connection signal="detached" from="InputDoor" to="." method="_on_InputDoor_detached"]
[connection signal="state_change" from="GameButton" to="." method="_on_GameButton_state_change"]
[connection signal="idle" from="Lever" to="." method="_on_Lever_idle"]
[connection signal="moved" from="Lever" to="." method="_on_Lever_moved"]
